--- a/src/assets/css/normalize.css
+++ b/src/assets/css/normalize.css
@@ -11,7 +11,8 @@
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
-  font-size:20px
+  font-size:20px;
+  height: 100%;
 }
 
 /* Sections
